--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,9 +142,7 @@ jobs:
           set -x
           sudo rm -rf /opt/intel/oneapi/dpl || true
           source /opt/intel/oneapi/setvars.sh intel64 || true
-          if [[ "${{ matrix.cxx_compiler }}" == "dpcpp" ]]; then
-            echo "::warning::Compiler: $(dpcpp --version)"
-          fi
+          echo "::warning::Compiler: $(${{ matrix.cxx_compiler }} --version)"
           if [[ "${{ matrix.backend }}" == "dpcpp" ]]; then
             make_targets="sycl_iterator.pass"
             ctest_flags="-R sycl_iterator.pass"
@@ -199,13 +197,13 @@ jobs:
         shell: cmd
         run: |
           call %CONDA%/condabin/conda.bat activate base
+          powershell $output = ${{ matrix.cxx_compiler }} --version; echo ::warning::Compiler: $output
           IF "${{ matrix.backend }}" == "dpcpp" (
             set ninja_targets=sycl_iterator.pass
             set ctest_flags=-R sycl_iterator.pass
             echo ::warning::dpcpp backend is set. Compile and run only sycl_iterator.pass
           )
           IF "${{ matrix.cxx_compiler }}" == "dpcpp" (
-            powershell $output = dpcpp --version; echo ::warning::Compiler: $output
             set toolchain_option=-DCMAKE_TOOLCHAIN_FILE=../cmake/windows-dpcpp-toolchain.cmake
           )
           mkdir build && cd build
