--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,6 +133,7 @@ jobs:
           export PATH=$CONDA/bin:$CONDA/include:$CONDA/lib:$PATH
           export LD_LIBRARY_PATH=$CONDA/lib:$LD_LIBRARY_PATH
           export LIBRARY_PATH=$CONDA/lib:$LIBRARY_PATH
+          export CPATH=$CONDA/include:$CPATH
           if [[ "${{ matrix.cxx_compiler }}" == "dpcpp" ]]; then
             echo "::warning::Compiler: $(dpcpp --version)"
           fi
