--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,8 @@ jobs:
         run: |
           set -x
           source $CONDA/bin/activate
-          export PATH=$CONDA/include:$CONDA/lib:$PATH
+          export PATH=$CONDA/lib:$PATH
+          export CPATH=$CONDA/include:$CPATH
           if [[ "${{ matrix.cxx_compiler }}" == "dpcpp" ]]; then
             echo "::warning::Compiler: $(dpcpp --version)"
           fi
