--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,12 @@ jobs:
             build_type: release
             backend: tbb
             device_type: HOST
+          - os: ubuntu-20.04
+            cxx_compiler: clang++
+            std: 17
+            build_type: release
+            backend: omp
+            device_type: HOST
           - os: ubuntu-18.04
             cxx_compiler: clang++
             std: 11
