Remove duplicates from the list of possible openmp-simd flags
Signed-off-by: Zheltov, Sergey1 <sergey1.zheltov@intel.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ if (ONEDPL_ENABLE_SIMD)
         string(REGEX MATCH "[0-9][0-9][0-9][0-9]\\.[0-9]\\.[0-9]" DPCPP_VER ${VER})
     endif()
     if (NOT CMAKE_CXX_COMPILER MATCHES ".*dpcpp(-cl)?(.exe)?$" OR NOT DPCPP_VER VERSION_LESS 2021.4)
-        foreach(_simd_flag -fopenmp-simd /Qopenmp-simd -fopenmp-simd -qopenmp-simd /Qopenmp-simd -openmp-simd)
+        foreach(_simd_flag -fopenmp-simd /Qopenmp-simd -qopenmp-simd -openmp-simd)
             string(MAKE_C_IDENTIFIER ${_simd_flag} FLAG_DISPLAY_NAME)
             check_cxx_compiler_flag(${_simd_flag} ${FLAG_DISPLAY_NAME}_option)
             if (${FLAG_DISPLAY_NAME}_option)
