Use different OpenMP flags for Windows and UNIX
Signed-off-by: Zheltov, Sergey1 <sergey1.zheltov@intel.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,7 +223,11 @@ elseif(ONEDPL_BACKEND MATCHES "^(serial)$")
     message(STATUS "Compilation for the host due to serial backend")
 
 elseif(ONEDPL_BACKEND MATCHES "^(omp)$")
-    set(_openmp_flag "-fopenmp")
+    if(UNIX)
+        set(_openmp_flag "-fopenmp")
+    else()
+        set(_openmp_flag "-Qopenmp")
+    endif()
     set(_cmake_required_libraries ${CMAKE_REQUIRED_LIBRARIES})
     set(CMAKE_REQUIRED_LIBRARIES ${_openmp_flag})
     check_cxx_compiler_flag(${_openmp_flag} _openmp_option)
