CMake: update logic of ONEDPL_PAR_BACKEND handling

--- a/cmake/templates/oneDPLConfig.cmake.in
+++ b/cmake/templates/oneDPLConfig.cmake.in
@@ -23,17 +23,27 @@ if (EXISTS "${_onedpl_headers}")
         add_library(oneDPL INTERFACE IMPORTED)
         set_target_properties(oneDPL PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${_onedpl_headers}")
 
-        if (NOT DEFINED ONEDPL_BACKEND)
-            message(STATUS "oneDPL: ONEDPL_BACKEND is not set, dpcpp and tbb backends will be enabled if available")
-        elseif (ONEDPL_BACKEND MATCHES "^(tbb|omp|dpcpp)$")
-            message(STATUS "oneDPL: ONEDPL_BACKEND=${ONEDPL_BACKEND} is requested")
-        else()
-            message(STATUS "oneDPL: ONEDPL_BACKEND=${ONEDPL_BACKEND} is requested, but not supproted, available backends: dpcpp, omp, tbb")
+        if (ONEDPL_PAR_BACKEND AND NOT ONEDPL_PAR_BACKEND MATCHES "^(tbb|omp|serial)$")
+            message(STATUS "oneDPL: ONEDPL_PAR_BACKEND=${ONEDPL_PAR_BACKEND} is requested, but not supproted, available backends: tbb, omp, serial")
             set(oneDPL_FOUND FALSE)
             return()
         endif()
 
-        if (ONEDPL_BACKEND STREQUAL "omp")  # Handle OpenMP backend
+        if (NOT ONEDPL_PAR_BACKEND OR ONEDPL_PAR_BACKEND STREQUAL "tbb")  # Handle oneTBB backend
+            find_package(TBB 2021 QUIET COMPONENTS tbb)
+            if (NOT TBB_FOUND AND ONEDPL_PAR_BACKEND STREQUAL "tbb")  # If oneTBB backend is requested explicitly, but not found.
+                message(STATUS "oneDPL: ONEDPL_PAR_BACKEND=${ONEDPL_PAR_BACKEND} requested, but not found")
+                set(oneDPL_FOUND FALSE)
+                return()
+            elseif (TBB_FOUND)
+                set(ONEDPL_PAR_BACKEND tbb)
+                message(STATUS "oneDPL: ONEDPL_PAR_BACKEND=${ONEDPL_PAR_BACKEND}, disable OpenMP backend")
+                set_target_properties(oneDPL PROPERTIES INTERFACE_LINK_LIBRARIES TBB::tbb)
+                set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_TBB_BACKEND=1 ONEDPL_USE_OPENMP_BACKEND=0)
+            endif()
+        endif()
+
+        if (NOT ONEDPL_PAR_BACKEND OR ONEDPL_PAR_BACKEND STREQUAL "omp")  # Handle OpenMP backend
             if (UNIX)
                 set(_openmp_flag "-fopenmp")
             else()
@@ -47,55 +57,29 @@ if (EXISTS "${_onedpl_headers}")
             set(CMAKE_REQUIRED_LIBRARIES ${_onedpl_saved_required_libs})
             unset(_onedpl_saved_required_libs)
 
-            if (_openmp_option)
-                set_target_properties(oneDPL PROPERTIES INTERFACE_COMPILE_OPTIONS ${_openmp_flag})
-                set_target_properties(oneDPL PROPERTIES INTERFACE_LINK_LIBRARIES ${_openmp_flag})
-                unset(_openmp_option)
-
-                set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS
-                    ONEDPL_USE_TBB_BACKEND=0
-                    ONEDPL_USE_DPCPP_BACKEND=0
-                    ONEDPL_USE_OPENMP_BACKEND=1)
-            else()
-                message(STATUS "oneDPL: ONEDPL_BACKEND=${ONEDPL_BACKEND} is requested, but not supported (${_openmp_flag} is not supported by current compiler)")
+            if (NOT _openmp_option AND ONEDPL_PAR_BACKEND STREQUAL "omp")  # If OpenMP backend is requested explicitly, but not supported.
+                message(STATUS "oneDPL: ONEDPL_PAR_BACKEND=${ONEDPL_PAR_BACKEND} requested, but not supported")
                 set(oneDPL_FOUND FALSE)
                 return()
+            elseif (_openmp_option)
+                set(ONEDPL_PAR_BACKEND omp)
+                message(STATUS "oneDPL: ONEDPL_PAR_BACKEND=${ONEDPL_PAR_BACKEND}, disable oneTBB backend")
+                set_target_properties(oneDPL PROPERTIES INTERFACE_COMPILE_OPTIONS ${_openmp_flag})
+                set_target_properties(oneDPL PROPERTIES INTERFACE_LINK_LIBRARIES ${_openmp_flag})
+                set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_TBB_BACKEND=0 ONEDPL_USE_OPENMP_BACKEND=1)
             endif()
         endif()
 
-        if (NOT DEFINED ONEDPL_BACKEND OR ONEDPL_BACKEND STREQUAL "tbb")  # Handle oneTBB backend
-            find_package(TBB 2021 QUIET COMPONENTS tbb)
-            if (NOT TBB_FOUND)
-                if (ONEDPL_BACKEND STREQUAL "tbb")
-                    message(STATUS "oneDPL: ONEDPL_BACKEND=${ONEDPL_BACKEND} is requested, but not found (oneTBB is not found)")
-                    set(oneDPL_FOUND FALSE)
-                    return()
-                else()
-                    message(STATUS "oneDPL: oneTBB is not found, set ONEDPL_USE_TBB_BACKEND=0")
-                    set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_TBB_BACKEND=0)
-                endif()
-            else()
-                if (ONEDPL_BACKEND STREQUAL "tbb")
-                    set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=0)
-                endif()
-                set_target_properties(oneDPL PROPERTIES INTERFACE_LINK_LIBRARIES TBB::tbb)
-            endif()
+        if (NOT ONEDPL_PAR_BACKEND OR ONEDPL_PAR_BACKEND STREQUAL "serial")
+            set(ONEDPL_PAR_BACKEND serial)
+            message(STATUS "oneDPL: ONEDPL_PAR_BACKEND=${ONEDPL_PAR_BACKEND}, disable oneTBB and OpenMP backends")
+            set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_TBB_BACKEND=0 ONEDPL_USE_OPENMP_BACKEND=0)
         endif()
 
-        if (NOT DEFINED ONEDPL_BACKEND OR ONEDPL_BACKEND STREQUAL "dpcpp")  # Handle DPC++ backend
-            check_cxx_compiler_flag("-fsycl" _fsycl_option)
-            if (NOT _fsycl_option)
-                if (ONEDPL_BACKEND STREQUAL "dpcpp")
-                    message(STATUS "oneDPL: ONEDPL_BACKEND=${ONEDPL_BACKEND} is requested, but not supported (-fsycl is not supported by current compiler)")
-                    set(oneDPL_FOUND FALSE)
-                    return()
-                else()
-                    message(STATUS "oneDPL: -fsycl is not supported by current compiler, set ONEDPL_USE_DPCPP_BACKEND=0")
-                    set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=0)
-                endif()
-            elseif (ONEDPL_BACKEND STREQUAL "dpcpp")
-                set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_TBB_BACKEND=0)
-            endif()
+        check_cxx_compiler_flag("-fsycl" _fsycl_option)
+        if (NOT _fsycl_option)
+            message(STATUS "oneDPL: -fsycl is not supported by current compiler, set ONEDPL_USE_DPCPP_BACKEND=0")
+            set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=0)
         endif()
     endif()
 else()
