--- a/cmake/templates/oneDPLConfig.cmake.in
+++ b/cmake/templates/oneDPLConfig.cmake.in
@@ -23,8 +23,8 @@ if (EXISTS "${_onedpl_headers}")
         add_library(oneDPL INTERFACE IMPORTED)
         set_target_properties(oneDPL PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${_onedpl_headers}")
 
-        if (ONEDPL_PAR_BACKEND AND NOT ONEDPL_PAR_BACKEND MATCHES "^(tbb|omp|serial)$")
-            message(STATUS "oneDPL: ONEDPL_PAR_BACKEND=${ONEDPL_PAR_BACKEND} is requested, but not supproted, available backends: tbb, omp, serial")
+        if (ONEDPL_PAR_BACKEND AND NOT ONEDPL_PAR_BACKEND MATCHES "^(tbb|openmp|serial)$")
+            message(STATUS "oneDPL: ONEDPL_PAR_BACKEND=${ONEDPL_PAR_BACKEND} is requested, but not supproted, available backends: tbb, openmp, serial")
             set(oneDPL_FOUND FALSE)
             return()
         endif()
@@ -43,7 +43,7 @@ if (EXISTS "${_onedpl_headers}")
             endif()
         endif()
 
-        if (NOT ONEDPL_PAR_BACKEND OR ONEDPL_PAR_BACKEND STREQUAL "omp")  # Handle OpenMP backend
+        if (NOT ONEDPL_PAR_BACKEND OR ONEDPL_PAR_BACKEND STREQUAL "openmp")  # Handle OpenMP backend
             if (UNIX)
                 set(_openmp_flag "-fopenmp")
             else()
@@ -57,12 +57,12 @@ if (EXISTS "${_onedpl_headers}")
             set(CMAKE_REQUIRED_LIBRARIES ${_onedpl_saved_required_libs})
             unset(_onedpl_saved_required_libs)
 
-            if (NOT _openmp_option AND ONEDPL_PAR_BACKEND STREQUAL "omp")  # If OpenMP backend is requested explicitly, but not supported.
+            if (NOT _openmp_option AND ONEDPL_PAR_BACKEND STREQUAL "openmp")  # If OpenMP backend is requested explicitly, but not supported.
                 message(STATUS "oneDPL: ONEDPL_PAR_BACKEND=${ONEDPL_PAR_BACKEND} requested, but not supported")
                 set(oneDPL_FOUND FALSE)
                 return()
             elseif (_openmp_option)
-                set(ONEDPL_PAR_BACKEND omp)
+                set(ONEDPL_PAR_BACKEND openmp)
                 message(STATUS "oneDPL: ONEDPL_PAR_BACKEND=${ONEDPL_PAR_BACKEND}, disable oneTBB backend")
                 set_target_properties(oneDPL PROPERTIES INTERFACE_COMPILE_OPTIONS ${_openmp_flag})
                 set_target_properties(oneDPL PROPERTIES INTERFACE_LINK_LIBRARIES ${_openmp_flag})
@@ -77,7 +77,10 @@ if (EXISTS "${_onedpl_headers}")
         endif()
 
         check_cxx_compiler_flag("-fsycl" _fsycl_option)
-        if (NOT _fsycl_option)
+        if (_fsycl_option)
+            message(STATUS "oneDPL: -fsycl is supported by current compiler, set ONEDPL_USE_DPCPP_BACKEND=1")
+            set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=1)
+        else()
             message(STATUS "oneDPL: -fsycl is not supported by current compiler, set ONEDPL_USE_DPCPP_BACKEND=0")
             set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=0)
         endif()
