CMake/config: don't set ONEDPL_USE_DPCPP_BACKEND=1
Signed-off-by: Veprev, Alexey alexey.veprev@intel.com

--- a/cmake/templates/oneDPLConfig.cmake.in
+++ b/cmake/templates/oneDPLConfig.cmake.in
@@ -77,10 +77,7 @@ if (EXISTS "${_onedpl_headers}")
         endif()
 
         check_cxx_compiler_flag("-fsycl" _fsycl_option)
-        if (_fsycl_option)
-            message(STATUS "oneDPL: -fsycl is supported by current compiler, set ONEDPL_USE_DPCPP_BACKEND=1")
-            set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=1)
-        else()
+        if (NOT _fsycl_option)
             message(STATUS "oneDPL: -fsycl is not supported by current compiler, set ONEDPL_USE_DPCPP_BACKEND=0")
             set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=0)
         endif()
