Add CMake and IDE specific files to .gitignore (#437)
* CMake: ignore build folder
* IDE: ignore .vs and out folders
* IDE: ignore CMakeSettings.json
* Add to .gitignore .vscode folder
* Add comments for _build folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+# ----- Documentation build ------
 _build
+
+# -------- CMake --------
+build/*
+
+# -------- IDE --------
+.vscode/*
+.vs/*
+out/*
+CMakeSettings.json
