--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,7 +168,7 @@ jobs:
             ctest_flags="-R sycl_iterator.pass"
             echo "::warning::dpcpp backend is set. Compile and run only sycl_iterator.pass"
           else
-            make_targets="build-all-tests"
+            make_targets="build-onedpl-tests"
           fi
           mkdir build && cd build
           lscpu
@@ -226,7 +226,7 @@ jobs:
             echo ::warning::dpcpp backend is set. Compile and run only sycl_iterator.pass
           )
           ELSE (
-            set ninja_targets=build-all-tests
+            set ninja_targets=build-onedpl-tests
           )
           IF "${{ matrix.cxx_compiler }}" == "dpcpp" (
             powershell $output = dpcpp --version; Write-Host ::warning::Compiler: $output
@@ -279,5 +279,5 @@ jobs:
           mkdir build && cd build
           cmake -DCMAKE_CXX_STANDARD=${{ matrix.std }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
             -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} -DONEDPL_BACKEND=${{ matrix.backend }} ..
-          make VERBOSE=1 build-all-tests -j${MACOS_BUILD_CONCURRENCY}
+          make VERBOSE=1 build-onedpl-tests -j${MACOS_BUILD_CONCURRENCY}
           ctest --timeout ${TEST_TIMEOUT} --output-on-failure -E "${EXCLUDE_FROM_TESTING}"
