--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,6 +167,8 @@ jobs:
             make_targets="sycl_iterator.pass"
             ctest_flags="-R sycl_iterator.pass"
             echo "::warning::dpcpp backend is set. Compile and run only sycl_iterator.pass"
+          else
+            make_targets="build-onedpl-tests"
           fi
           mkdir build && cd build
           lscpu
@@ -223,6 +225,9 @@ jobs:
             set ctest_flags=-R sycl_iterator.pass
             echo ::warning::dpcpp backend is set. Compile and run only sycl_iterator.pass
           )
+          ELSE (
+            set ninja_targets=build-onedpl-tests
+          )
           IF "${{ matrix.cxx_compiler }}" == "dpcpp" (
             powershell $output = dpcpp --version; Write-Host ::warning::Compiler: $output
             set toolchain_option=-DCMAKE_TOOLCHAIN_FILE=../cmake/windows-dpcpp-toolchain.cmake
@@ -274,5 +279,5 @@ jobs:
           mkdir build && cd build
           cmake -DCMAKE_CXX_STANDARD=${{ matrix.std }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
             -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} -DONEDPL_BACKEND=${{ matrix.backend }} ..
-          make VERBOSE=1 -j${MACOS_BUILD_CONCURRENCY}
+          make VERBOSE=1 build-onedpl-tests -j${MACOS_BUILD_CONCURRENCY}
           ctest --timeout ${TEST_TIMEOUT} --output-on-failure -E "${EXCLUDE_FROM_TESTING}"
