--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -220,15 +220,14 @@ jobs:
         shell: cmd
         run: |
           call %CONDA%/condabin/conda.bat activate base
-          IF "${{ matrix.backend }}" == "dpcpp" (
+          if "${{ matrix.backend }}" == "dpcpp" (
             set ninja_targets=sycl_iterator.pass
             set ctest_flags=-R sycl_iterator.pass
             echo ::warning::dpcpp backend is set. Compile and run only sycl_iterator.pass
-          )
-          ELSE (
+          ) else (
             set ninja_targets=build-onedpl-tests
           )
-          IF "${{ matrix.cxx_compiler }}" == "dpcpp" (
+          if "${{ matrix.cxx_compiler }}" == "dpcpp" (
             powershell $output = dpcpp --version; Write-Host ::warning::Compiler: $output
             set toolchain_option=-DCMAKE_TOOLCHAIN_FILE=../cmake/windows-dpcpp-toolchain.cmake
           )
