--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,6 +110,12 @@ jobs:
             backend: tbb
             device_type: HOST
           - os: ubuntu-20.04
+            cxx_compiler: g++
+            std: 11
+            build_type: release
+            backend: tbb
+            device_type: HOST
+          - os: ubuntu-20.04
             cxx_compiler: clang++
             std: 17
             build_type: release
@@ -120,6 +126,12 @@ jobs:
             std: 17
             build_type: release
             backend: omp
+            device_type: HOST
+          - os: ubuntu-18.04
+            cxx_compiler: clang++
+            std: 11
+            build_type: release
+            backend: tbb
             device_type: HOST
           - os: ubuntu-20.04
             cxx_compiler: icpx
