--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,11 +24,19 @@ add_custom_target(run-onedpl-tests
     DEPENDS build-onedpl-tests
     COMMENT "Build and run all oneDPL tests")
 
-macro(onedpl_add_test test_source_file)
-    file(RELATIVE_PATH _test_name "${CMAKE_CURRENT_SOURCE_DIR}" "${test_source_file}")
-    string(REPLACE "\.cpp" "" _test_name ${_test_name})
-    string(REPLACE "/" "-" _test_name ${_test_name})
-    string(REPLACE "\.cpp" "" _test_name ${_test_name})
+macro(onedpl_add_test test_source_file is_std_test)
+    if (${is_std_test})
+        #process std tests
+        file(RELATIVE_PATH _test_name "${CMAKE_CURRENT_SOURCE_DIR}" "${test_source_file}")
+        string(REPLACE "\.cpp" "" _test_name ${_test_name})
+        string(REPLACE "/" "-" _test_name ${_test_name})
+        message(STATUS "add_executable for std tests : ${_test_name}")
+    else()
+        #process oneDPL tests
+        get_filename_component(_test_name ${test_source_file} NAME)
+        string(REPLACE "\.cpp" "" _test_name ${_test_name})
+        message(STATUS "add_executable for oneDPL tests : ${_test_name}")
+    endif()
 
     add_executable(${_test_name} EXCLUDE_FROM_ALL "${test_source_file}")
     target_compile_definitions(${_test_name} PRIVATE _PSTL_TEST_SUCCESSFUL_KEYWORD=1)
@@ -42,8 +50,12 @@ macro(onedpl_add_test test_source_file)
         target_compile_options(${_test_name} PRIVATE $<$<CONFIG:Release>:-fno-strict-aliasing>)
     endif()
 
-    target_include_directories(${_test_name} PRIVATE "${CMAKE_CURRENT_LIST_DIR}" "${CMAKE_CURRENT_LIST_DIR}/support")
-    target_include_directories(${_test_name} PRIVATE "${CMAKE_CURRENT_LIST_DIR}" "${CMAKE_CURRENT_LIST_DIR}/support_stdlib")
+    target_include_directories(${_test_name} PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
+    target_include_directories(${_test_name} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/support")
+    if (${is_std_test})
+        target_include_directories(${_test_name} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/support_stdlib")
+    endif()
+
     target_link_libraries(${_test_name} PRIVATE oneDPL)
     set_target_properties(${_test_name} PROPERTIES CXX_EXTENSIONS NO)
 
@@ -104,12 +116,26 @@ macro(onedpl_add_test test_source_file)
 endmacro()
 
 set(_skip_regex_for_not_dpcpp "(xpu_api/algorithms|xpu_api/functional|xpu_api/numerics)")
-file(GLOB_RECURSE UNIT_TESTS "std/*.pass.cpp")
+set(_skip_regex_for_not_std "(std)")
+file(GLOB_RECURSE UNIT_TESTS "*.pass.cpp")
 foreach (_file IN LISTS UNIT_TESTS)
+    message(STATUS "Process the next source file : ${_file}")
     if (_file MATCHES "${_skip_regex_for_not_dpcpp}" AND NOT ONEDPL_BACKEND MATCHES "^(dpcpp|dpcpp_only)$")
         message(STATUS "Skip test ${_file} as it requires DPC++ backend")
         continue()
     endif()
 
-    onedpl_add_test(${_file})
+    if (_file MATCHES "${_skip_regex_for_not_std}")
+        continue()
+    endif()
+
+    #process oneDPL test
+    onedpl_add_test(${_file} FALSE)
+endforeach()
+
+file(GLOB_RECURSE UNIT_TESTS "std/*.pass.cpp")
+foreach (_file IN LISTS UNIT_TESTS)
+    message(STATUS "Process the next source file : ${_file}")
+    #process std test
+    onedpl_add_test(${_file} TRUE)
 endforeach()
